@@ -3302,6 +3302,58 @@ class spell_gen_gift_of_naaru : public SpellScriptLoader
         }
 };
 
+enum PvPTrinketTriggeredSpells
+{
+    SPELL_WILL_OF_THE_FORSAKEN_COOLDOWN_TRIGGER = 72752,
+    SPELL_WILL_OF_THE_FORSAKEN_COOLDOWN_TRIGGER_WOTF = 72757,
+};
+
+class spell_pvp_trinket_wotf_shared_cd : public SpellScriptLoader
+{
+    public:
+        spell_pvp_trinket_wotf_shared_cd() : SpellScriptLoader("spell_pvp_trinket_wotf_shared_cd") {}
+
+        class spell_pvp_trinket_wotf_shared_cd_SpellScript : public SpellScript
+        {
+            PrepareSpellScript(spell_pvp_trinket_wotf_shared_cd_SpellScript);
+
+            bool Load()
+            {
+                return GetCaster()->GetTypeId() == TYPEID_PLAYER;
+            }
+
+            bool Validate(SpellInfo const* /*spellEntry*/)
+            {
+                if (!sSpellMgr->GetSpellInfo(SPELL_WILL_OF_THE_FORSAKEN_COOLDOWN_TRIGGER) || !sSpellMgr->GetSpellInfo(SPELL_WILL_OF_THE_FORSAKEN_COOLDOWN_TRIGGER_WOTF))
+                    return false;
+                return true;
+            }
+
+            void HandleScript(SpellEffIndex /*effIndex*/)
+            {
+                Player* caster = GetCaster()->ToPlayer();
+                SpellInfo const* spellInfo = GetSpellInfo();
+                caster->AddSpellCooldown(spellInfo->Id, 0, time(NULL) + sSpellMgr->GetSpellInfo(SPELL_WILL_OF_THE_FORSAKEN_COOLDOWN_TRIGGER)->GetRecoveryTime() / IN_MILLISECONDS);
+                WorldPacket data(SMSG_SPELL_COOLDOWN, 8+1+4);
+                data << uint64(caster->GetGUID());
+                data << uint8(0);
+                data << uint32(spellInfo->Id);
+                data << uint32(0);
+                caster->GetSession()->SendPacket(&data);
+            }
+
+            void Register()
+            {
+                OnEffectHit += SpellEffectFn(spell_pvp_trinket_wotf_shared_cd_SpellScript::HandleScript, EFFECT_0, SPELL_EFFECT_DUMMY);
+            }
+        };
+
+        SpellScript* GetSpellScript() const
+        {
+            return new spell_pvp_trinket_wotf_shared_cd_SpellScript();
+        }
+};
+
 class spell_gen_av_honorable_defender : public SpellScriptLoader
 {
     public:
@@ -3406,5 +3458,6 @@ void AddSC_generic_spell_scripts()
     new spell_gen_upper_deck_create_foam_sword();
     new spell_gen_bonked();
     new spell_gen_gift_of_naaru();
+    new spell_pvp_trinket_wotf_shared_cd();
     new spell_gen_av_honorable_defender();
 }
